# microdatasets

./: .buildinfo  .codecov.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  genindex.html  index.html  mloq.yaml  objects.inv  poetry.toml  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: deploy-docs.yml  push.yml
_modules/: index.html
_modules/microdatasets/: __main__.html
_modules/microdatasets/dsprites/: dsprites.html  shape_generator.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/microdatasets/: index.rst.txt
_sources/autoapi/microdatasets/__main__/: index.rst.txt
_sources/autoapi/microdatasets/dsprites/: index.rst.txt
_sources/autoapi/microdatasets/dsprites/dsprites/: index.rst.txt
_sources/autoapi/microdatasets/dsprites/shape_generator/: index.rst.txt
_sources/autoapi/microdatasets/version/: index.rst.txt
autoapi/: index.html
autoapi/microdatasets/: index.html
autoapi/microdatasets/__main__/: index.html
autoapi/microdatasets/dsprites/: index.html
autoapi/microdatasets/dsprites/dsprites/: index.html
autoapi/microdatasets/dsprites/shape_generator/: index.html
autoapi/microdatasets/version/: index.html
docs/source/: conf.py  index.md
notebooks/: dsprites_demo.ipynb
outputs/2022-10-16/17-09-30/.hydra/: config.yaml  hydra.yaml
src/microdatasets/: __init__.py
src/microdatasets/dsprites/: __init__.py  dsprites.py  shape_generator.py
tests/: test_main.py
tests/dsprites/: test_dsprites.py
