
[tool.poetry]
name = "microdatasets"
version = "0.0.0"
description = "Simple datasets for evaluating DL algorithms."
authors = [
    "Guillem Duran Ballester",
]
maintainers = ["Guillem Duran Ballester"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "microdatasets", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]

homepage = "https://github.com/FragileTech/microdatasets"
repository = "https://github.com/FragileTech/microdatasets"
documentation = "https://github.com/FragileTech/microdatasets"

keywords = ["Machine learning", "artificial intelligence", "microdatasets"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.build]
generate-setup-file = true

# Requirements
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-cov = "^3.0"
psutil= "^5.8"
pytest-xdist = "^2.5"
pre-commit = "^2.6"
pytest-rerunfailures= "^10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Code coverage config
[tool.coverage.run]
branch = true
source = ["src/microdatasets"]

[tool.coverage.report]
exclude_lines =["no cover",
    'raise NotImplementedError',
    'if __name__ == "__main__":']
ignore_errors = true
omit = ["tests/*"]
 # black is the tool to format the source code
[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''# isort orders and lints imports
[tool.isort]
profile = "black"
line_length = 99
multi_line_output = 3
order_by_type = false
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true
combine_as_imports = true
include_trailing_comma = true
color_output = true
lines_after_imports = 2
honor_noqa = true

# Flakehell config
[tool.flakehell]
# optionally inherit from remote config (or local if you want)
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
# specify any flake8 options. For example, exclude "example.py":
exclude = [".git", "docs", ".ipynb*", "*.ipynb", ".pytest_cache"]
format = "grouped" # make output nice
max_line_length = 99 # show line of source code in output
show_source = true
inline_quotes='"'
import_order_style = "appnexus"
application_package_names = ["microdatasets"]
application_import_names = ["microdatasets"]
# Fix AttributeError: 'Namespace' object has no attribute 'extended_default_ignore'
extended_default_ignore=[]

[tool.flakehell.plugins]
"flake8*" = ["+*"]
pylint = ["+*"]
pyflakes = ["+*"]
pycodestyle = ["+*" , "-D100", "-D104", "-D301", "-W503", "-W504"]

[tool.flakehell.exceptions."**/__init__.py"]
pyflakes = ["-F401"]

# No docs in the tests. No unused imports (otherwise pytest fixtures raise errors).
[tool.flakehell.exceptions."**/tests/*"]
pycodestyle = ["-D*"]
"flake8*" = ["-D*"]
pylint = ["-D*"]
pyflakes = ["-F401", "-F811"]

[tool.pylint.master]
ignore = 'tests'
load-plugins =' pylint.extensions.docparams'

[tool.pylint.messages_control]
disable = 'all,'
enable = """,
         missing-param-doc,
         differing-param-doc,
         differing-type-doc,
         missing-return-doc,
         """

[tool.flakehell.exceptions."**/assets/*"]
pycodestyle = ["-*"]
pyflakes = ["-*"]
"flake8*" = ["-*"]
